--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Armaghan Akbar Abbasi - Portfolio</title>
+  <title>Komal Teli - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -86,8 +86,8 @@
 </head>
 <body>
   <header>
-    <h1>Armaghan Akbar Abbasi</h1>
-    <p>Computer Engineer | RAN & 5G Enthusiast | Internet of Things | Embedded Systems</p>
+    <h1>Komal Teli</h1>
+    <p>Electronics Engineer | RAN & 5G Enthusiast | Internet of Things | Embedded Systems</p>
     <p>Email: armaghanabbasi98@gmail.com | LinkedIn: https://linkedin.com/in/armaghan-akbar-abbasi</p>
   </header>
 
