--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <body>
   <header>
     <h1>Komal Teli</h1>
-    <p>Electronics Engineer | RAN & 5G Enthusiast | Internet of Things | Embedded Systems</p>
-    <p>Email: armaghanabbasi98@gmail.com | LinkedIn: https://linkedin.com/in/armaghan-akbar-abbasi</p>
+    <p>Electronics Engineer | Hardware Design Engineer | Inertial Navigation System | Altium Designer | German | FPGA | Internet of Things | Embedded Systems</p>
+    <p>Email: komaltelism@gmail.com | LinkedIn: https://linkedin.com/in/armaghan-akbar-abbasi</p>
   </header>
 
 
