--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <header>
     <h1>Komal Teli</h1>
     <p>Electronics Engineer | Hardware Design Engineer | Inertial Navigation System | Altium Designer | German | FPGA | Internet of Things | Embedded Systems</p>
-    <p>Email: komaltelism@gmail.com | LinkedIn: https://linkedin.com/in/armaghan-akbar-abbasi</p>
+    <p>Email: komaltelism@gmail.com | LinkedIn: http://www.linkedin.com/in/komalteli</p>
   </header>
 
 
@@ -97,7 +97,7 @@
   <div class="container">
     <div class="section" style="text-align: justify;">
       <h2 style="text-decoration: underline;">About Me</h2>
-      <p>Motivated Computer Engineer with a Master’s in 5G Mobile Communications and Intelligent Embedded Systems, specializing in embedded firmware and IoT-enabled real-time systems. Proficient in C/C++, Python and MATLAB, with extensive work on ARM-based platforms (STM32, ESP32, Jetson Nano). In recent projects, I designed low-power LoRa-based environmental monitoring nodes, built AI-driven autonomous robots with YOLOv3 object detection, and simulated 5G mmWave MIMO systems for high-frequency wireless applications. I excel at integrating hardware and software to deliver stable, efficient and scalable embedded solutions.</p>
+      <p>A Hardware Design Engineer with 3 years of experience specialising in the development of inertial Navigation Systems (INS) and Inertial Measurement Units (IMU). Expert in using Altium Designer for schematic design, alongside LTSpice, PSpice and Multisim for circuit simulation and analysis, ALD service MTBF calculator solution-driven. Proven ability to lead cross-functional teams through the complete product lifecycle, ensuring adherence to project timelines and industry standards. Recognised as successfully delivering innovative solutions that enhance performance and reliability in complex electronic systems.</p>
     </div>
 
     
